--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -83,7 +83,7 @@
 			border-radius:3px;
 		}
 	}
-	.editor-btn-font{
+	.editor-btn-font {
 		font-size:0;
 		.icon-img {width:17px; height:17px;}
 		&.on {
@@ -91,15 +91,43 @@
 			border-radius:3px;
 		}
 	}
-	.editor-btn-color {
-		padding:5px;
+
+	.menu-item {
 		font-size:0;
+		width: 1.75rem;
+		height: 1.75rem;
+		color: #0D0D0D;
+		border: none;
+		background-color: transparent;
+		border-radius: 0.4rem;
+		padding: 0.25rem;
+		margin-right: 0.25rem;
+
+		&.is-active,
+		&:hover {
+			color: #FFF;
+			background-color: #0D0D0D;
+		}
+
+		svg {
+			width: 100%;
+			height: 100%;
+			fill: currentColor;
+		}
+
 		.color-box {
 			width:17px; height:17px;
 			border-radius:100%;
+			border: 1px solid #fff;
 		}
 	}
-	.link-bar {width:50px;}
+	.divider {
+		width: 2px;
+		height: 1.25rem;
+		background-color: rgba(#000, 0.1);
+		margin-left: 0.5rem;
+		margin-right: 0.75rem;
+	}
 
 }
 
@@ -194,6 +222,7 @@
 .ProseMirror {
 	min-height: 80vh;
 	padding: 20px;
+
 	> * + * {
 		margin-top: 0.3em;
 	}
@@ -205,5 +234,49 @@
 
 	&:focus {
 		outline: none;
+	}
+
+	code {
+		background-color: rgba(#616161, 0.1);
+		color: #616161;
+	}
+
+	pre {
+		background: #0D0D0D;
+		color: #FFF;
+		font-family: 'JetBrainsMono', monospace;
+		padding: 0.75rem 1rem;
+		border-radius: 0.5rem;
+
+		code {
+			color: inherit;
+			padding: 0;
+			background: none;
+			font-size: 0.8rem;
+		}
+	}
+
+	mark {
+		background-color: #FAF594;
+	}
+
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+
+	hr {
+		margin: 1rem 0;
+	}
+
+	blockquote {
+		padding-left: 1rem;
+		border-left: 2px solid rgba(#0D0D0D, 0.1);
+	}
+
+	hr {
+		border: none;
+		border-top: 2px solid rgba(#0D0D0D, 0.1);
+		margin: 2rem 0;
 	}
 }
