--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -53,7 +53,6 @@
 		cursor:pointer;
 		&:hover > div:not(.popupBox) {opacity:0.7;}
 	}
-	.editor-btn-img,
 	.editor-btn-link {
 		position:relative;
 		font-size:0;
@@ -72,7 +71,6 @@
 
 			}
 		}
-
 	}
 
 	.editor-btn-text{
@@ -91,7 +89,6 @@
 			border-radius:3px;
 		}
 	}
-
 	.menu-item {
 		font-size:0;
 		width: 1.75rem;
@@ -102,19 +99,15 @@
 		border-radius: 0.4rem;
 		padding: 0.25rem;
 		margin-right: 0.25rem;
-
-		&.is-active,
-		&:hover {
+		&.is-active, &:hover {
 			color: #FFF;
 			background-color: #0D0D0D;
 		}
-
 		svg {
 			width: 100%;
 			height: 100%;
 			fill: currentColor;
 		}
-
 		.color-box {
 			width:17px; height:17px;
 			border-radius:100%;
@@ -128,101 +121,93 @@
 		margin-left: 0.5rem;
 		margin-right: 0.75rem;
 	}
-
 }
 
-
-.editor-content-box, .editor-content {
-	margin:20px 0;
-	position:relative;
-	background: #fff;
-	.tag-img-wrap img {width:100%;}
-
-	.editor-btn-img {
-		position:absolute;
-		right:calc(50% + 320px);
-		font-size:0;
-		padding:10px;
-		width:40px;
-		height:40px;
-		border-radius: 100%;
-		box-shadow: $G-box-shadow2;
-		cursor: pointer;
-		.icon-img {height:100%;}
-		&:hover .icon-img {opacity: 0.6;}
-		.tooltip {
-			position:absolute;
-			top:calc(100% + 15px); left:0;
-			font-size:13px; color:$G-white;
-			background:$G-color8;
-			white-space:nowrap;
-			padding:5px 12px;
-			border-radius: 4px;
-			box-shadow: $G-box-shadow2;
-			&::after {
-				position:absolute;
-				left:16px; top:-5px;
-				width:0; height:0;
-				border-bottom:5px solid $G-color8;
-				border-left:4px solid transparent;
-				border-right:4px solid transparent;
-				content:'';
+.editor-collaboration {
+	display: flex;
+	justify-content: space-between;
+	padding: 5px;
+	.status {
+		display: flex;
+		align-items: center;
+		border-radius: 5px;
+		&::before {
+			content: ' ';
+			flex: 0 0 auto;
+			display: inline-block;
+			width: 0.5rem;
+			height: 0.5rem;
+			background: rgba(#0D0D0D, 0.5);
+			border-radius: 50%;
+			margin-right: 0.5rem;
+		}
+		&-connecting::before {
+			background: #616161;
+		}
+		&-connected::before {
+			background: #B9F18D;
+		}
+	}
+	.name {
+		button {
+			background: none;
+			border: none;
+			font: inherit;
+			font-size: 12px;
+			font-weight: 600;
+			color: #0D0D0D;
+			border-radius: 0.4rem;
+			padding: 0.25rem 0.5rem;
+			&:hover {
+				color: #FFF;
+				background-color: #0D0D0D;
 			}
 		}
 	}
+}
 
-
-	.default-text {
-		font-size:15px;
-		color:$G-color7;
-		max-width:800px;
-		margin-right:auto;
-		margin-left:auto;
-	}
-
-	&::selection,
-	::selection { background:#FFC6C6; }
-
-	.content-text {
-		font-size:15px;
-		max-width:800px;
-		margin-right:auto;
-		margin-left:auto;
-	}
-	.content-text-subject {font-size:22px; font-weight:$G-fw-bold}
+.editor-content {
+	margin:20px 0;
+	position:relative;
+	background: #fff;
+	&::selection, ::selection { background:#FFC6C6; }
 	.content-text-link {
 		text-decoration: underline;
 		color:#1778ba;
 	}
-
-	.content-img-box {
-		position:relative;
-		display:inline-block;
-		left:50%;
-		transform: translateX(-50%);
-		.trash {
-			@include icon-trash($G-white);
-			background-color: rgba(0,0,0,0.6);
-			position:absolute;
-			bottom:25px; right:25px;
-			width:40px; height:40px;
-			background-size:20px 20px;
-			padding-top:0;
-			border-radius:3px;
-			cursor: pointer;
-			&:hover {
-				background-color: rgba(0,0,0,0.9);
-			}
-		}
-
-	}
 	img {max-width:100%; height:auto;}
+}
+
+/* Give a remote user a caret */
+.collaboration-cursor__caret {
+	position: relative;
+	margin-left: -1px;
+	margin-right: -1px;
+	border-left: 1px solid #0D0D0D;
+	border-right: 1px solid #0D0D0D;
+	word-break: normal;
+	pointer-events: none;
+}
+
+/* Render the username above the caret */
+.collaboration-cursor__label {
+	position: absolute;
+	top: -1.4em;
+	left: -1px;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	user-select: none;
+	color: #0D0D0D;
+	padding: 0.1rem 0.3rem;
+	border-radius: 3px 3px 3px 0;
+	white-space: nowrap;
 }
 
 .ProseMirror {
 	min-height: 80vh;
 	padding: 20px;
-
 	> * + * {
 		margin-top: 0.3em;
 	}
@@ -231,23 +216,19 @@
 			outline: 5px solid #ffe1d8;
 		}
 	}
-
 	&:focus {
 		outline: none;
 	}
-
 	code {
 		background-color: rgba(#616161, 0.1);
 		color: #616161;
 	}
-
 	pre {
 		background: #0D0D0D;
 		color: #FFF;
 		font-family: 'JetBrainsMono', monospace;
 		padding: 0.75rem 1rem;
 		border-radius: 0.5rem;
-
 		code {
 			color: inherit;
 			padding: 0;
@@ -255,25 +236,20 @@
 			font-size: 0.8rem;
 		}
 	}
-
 	mark {
 		background-color: #FAF594;
 	}
-
 	img {
 		max-width: 100%;
 		height: auto;
 	}
-
 	hr {
 		margin: 1rem 0;
 	}
-
 	blockquote {
 		padding-left: 1rem;
 		border-left: 2px solid rgba(#0D0D0D, 0.1);
 	}
-
 	hr {
 		border: none;
 		border-top: 2px solid rgba(#0D0D0D, 0.1);
